feat: EPIC B6.3 Hot decryption toggle
